add mock payment provider for k6 and testing

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,4 +15,4 @@ CLOUDINARY_API_SECRET=clouidinary-cloud-secret
 FRONTEND_URL=frontend-url
 STRIPE_API_KEY=stripe-api-key
 STRIPE_WEBHOOK_SECRET=stripe-webhook-secret
-
+PAYMENT_PROVIDER="prod" or "mock"
